// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Shallow Snapshot Tests basic 1`] = `
<ForwardRef(Box)
  my={1}
>
  <CenterSpinner />
</ForwardRef(Box)>
`;

exports[`Shallow Snapshot Tests loaded (pc) 1`] = `
<Fragment>
  <CommonHelmet
    description="定番から穴場まで、ディズニーのトイレマップです。"
    title="トイレマップ"
  />
  <GlobalMenu
    mapPage={true}
    topBarPosition="static"
  >
    <ForwardRef(Box)
      sx={
        Object {
          "height": "calc(100px - 66px)",
          "position": "relative",
          "width": "100px",
        }
      }
    >
      <ParkMap
        initZoom={2}
        park="L"
        setMap={[Function]}
      />
      <ForwardRef(Box)
        sx={
          Object {
            "bottom": "auto",
            "left": "auto",
            "margin": 0,
            "position": "fixed",
            "right": 20,
            "top": 116,
            "zIndex": 1000,
          }
        }
      >
        <ParkSelectBox
          onChangePark={[Function]}
          park="L"
        />
      </ForwardRef(Box)>
      <LoadingProgressBar
        fetchingState="success"
        isMobile={false}
        loadedPages={0}
      />
    </ForwardRef(Box)>
  </GlobalMenu>
</Fragment>
`;

exports[`Shallow Snapshot Tests loaded 1`] = `
<Fragment>
  <CommonHelmet
    description="定番から穴場まで、ディズニーのトイレマップです。"
    title="トイレマップ"
  />
  <GlobalMenu
    mapPage={true}
    topBarPosition="static"
  >
    <ForwardRef(Box)
      sx={
        Object {
          "height": "calc(100px - 58px)",
          "position": "relative",
          "width": "100px",
        }
      }
    >
      <ParkMap
        initZoom={2}
        park="L"
        setMap={[Function]}
      >
        <MapMarker
          autoOpen={false}
          draggable={false}
          key="special-map--67.6875-140.75"
          map={
            Object {
              "invalidateSize": [MockFunction],
              "on": [MockFunction],
            }
          }
          popup={
            <React.Fragment>
              <Image
                src="https://cdn-ak.f.st-hatena.com/images/fotolife/n/nats-co/20160323/20160323164220.jpg"
                width="full"
              />
              <DynamicAlignedText>
                アリスモチーフのトイレです。トランプ模様の扉がかわいい。
              </DynamicAlignedText>
            </React.Fragment>
          }
          position={
            Object {
              "lat": -67.6875,
              "lng": 140.75,
            }
          }
          variant="blue"
          zIndexOffset={0}
        />
      </ParkMap>
      <ForwardRef(Box)
        sx={
          Object {
            "bottom": "auto",
            "left": "auto",
            "margin": 0,
            "position": "fixed",
            "right": 20,
            "top": 108,
            "zIndex": 1000,
          }
        }
      >
        <ParkSelectBox
          onChangePark={[Function]}
          park="L"
        />
      </ForwardRef(Box)>
      <LoadingProgressBar
        fetchingState="success"
        isMobile={true}
        loadedPages={0}
      />
    </ForwardRef(Box)>
  </GlobalMenu>
</Fragment>
`;

exports[`Shallow Snapshot Tests loading markers 1`] = `
<Fragment>
  <CommonHelmet
    description="定番から穴場まで、ディズニーのトイレマップです。"
    title="トイレマップ"
  />
  <GlobalMenu
    mapPage={true}
    topBarPosition="static"
  >
    <ForwardRef(Box)
      sx={
        Object {
          "height": "calc(100px - 58px)",
          "position": "relative",
          "width": "100px",
        }
      }
    >
      <ParkMap
        initZoom={2}
        park="L"
        setMap={[Function]}
      />
      <ForwardRef(Box)
        sx={
          Object {
            "bottom": "auto",
            "left": "auto",
            "margin": 0,
            "position": "fixed",
            "right": 20,
            "top": 108,
            "zIndex": 1000,
          }
        }
      >
        <ParkSelectBox
          onChangePark={[Function]}
          park="L"
        />
      </ForwardRef(Box)>
      <LoadingProgressBar
        fetchingState="loading"
        isMobile={true}
        loadedPages={0}
      />
    </ForwardRef(Box)>
  </GlobalMenu>
</Fragment>
`;

exports[`Shallow Snapshot Tests without height 1`] = `
<ForwardRef(Box)
  my={1}
>
  <CenterSpinner />
</ForwardRef(Box)>
`;
